cambios en las variables, html y css del VJ

--- a/vj.html
+++ b/vj.html
@@ -75,7 +75,7 @@
                 <div class="card-contenido-texto-div">
                     <h3>Batman vs Superman: el origen de la justicia</h3>
                     <p>Descubre el enfrentamiento épico entre el Caballero Oscuro y el Hombre de Acero. ¿Quién ganará?</p>
-                    <a href="#">En Prime Video</a>
+                    <a href="#" class="contenido-link"><span>En Prime Video</span></a>
                 </div>
             </div>
 
@@ -84,7 +84,7 @@
                 <div class="card-contenido-texto-div">
                     <h3>The Batman</h3>
                     <p>Explora el lado oscuro de Gotham en esta nueva y emocionante reinvención del Caballero Oscuro.</p>
-                    <a href="#">En YouTube Trailer</a>
+                    <a class="contenido-link" href="#"><span>En YouTube Trailer</span></a>
                 </div>
             </div>
         </section>
