--- a/home.html
+++ b/home.html
@@ -26,11 +26,14 @@
                 <button class="lupa"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
 
-            <div class="atajos">
-                <button>carrito</button>
-                <button>mi cuenta</button>
+            <!-- Carrito y Cuenta -->
+            <div class="user-options">
+                <a href="#" class="cart">🛒 Mi Carrito</a>
+                <a href="#" class="account">👤 Mi Cuenta</a>
             </div>
         </div>
     </header>
+
+    
 </body>
 </html>
