--- a/home.html
+++ b/home.html
@@ -28,12 +28,60 @@
 
             <!-- Carrito y Cuenta -->
             <div class="user-options">
-                <a href="#" class="cart">🛒 Mi Carrito</a>
-                <a href="#" class="account">👤 Mi Cuenta</a>
+                <a href="#" class="cart"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="#" class="account"><i class="fa-solid fa-user"></i></a>
             </div>
         </div>
     </header>
+    <div class="main-container">
+        <!-- Carrusel 1 -->
+        <section class="carousel carousel-1">
+            <div class="arrow left-arrow">‹</div>
+            <div class="cards-container">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+            <div class="arrow right-arrow">›</div>
+        </section>
 
+        <!-- Carrusel 2 -->
+        <section class="carousel carousel-2">
+            <div class="arrow left-arrow">‹</div>
+            <div class="cards-container">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+            <div class="arrow right-arrow">›</div>
+        </section>
+
+        <!-- Carrusel 3 -->
+        <section class="carousel carousel-3">
+            <div class="arrow left-arrow">‹</div>
+            <div class="cards-container">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+            <div class="arrow right-arrow">›</div>
+        </section>
+
+        <!-- Carrusel 4 -->
+        <section class="carousel carousel-4">
+            <div class="arrow left-arrow">‹</div>
+            <div class="cards-container">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+            <div class="arrow right-arrow">›</div>
+        </section>
+    </div>
     
 </body>
 </html>
