Se añadio la validacion del formulario de register

--- a/login.html
+++ b/login.html
@@ -36,7 +36,8 @@
                         </button>
                     </div>
 
-                    <p class="register-text">¿No tienes cuenta? <a href="#">Regístrate</a></p>
+                    <p class="register-text">¿No tienes cuenta? <a href="registrer.html">Regístrate</a></p>
+
                 </form>
             </div>
         </div>
