Cambio de nombre de un evento

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         <div class="login-container">
             <div class="login-box">
                 <h2>ENTRA A GAME STORE</h2>
-                <form onsubmit="CheckLogin(event)"> <!-- Llama a la función handleLogin al enviar -->
+                <form onsubmit="CheckLogin(event)"> 
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" placeholder="you@email.com" required>
 
