Avance de estilos en movil y tablet, se agregan seccion de titulos

--- a/vj.html
+++ b/vj.html
@@ -31,6 +31,22 @@
         </div>
     </header>
     <section class="main-content">
+        <section class="section-titulos">
+            <div class="section-titulos-img-div">
+                <img class="section-titulos-img" src="img/batmanVsSupermanAnimado.png" alt="Batman y Superman">
+            </div>
+            <div class="section-titulos-texto-div">
+                <span>
+                    <a class="breadcrums-link" href="">INICIO</a>
+                    /<a class="breadcrums-link" href="">ARCADE</a>/
+                    <a class="breadcrums-link" href="">4 EN LINEA BATMAN VS SUPERMAN</a></span>
+                <h1>4 EN LINEA BATMAN VS SUPERMAN</h1>
+                <p>
+                    El clásico 4 en Línea, adaptado para los seguidores y amantes de los héroes del universo DC. 
+                    4 en línea, triunfo asegurado
+                </p>
+            </div>
+        </section>
         <section class="game-section">
             <div class="tableroyanuncios-div">
                 <div class="anuncio-div anuncio-izquierda">
@@ -71,7 +87,9 @@
 
         <section class="contenido-section">
             <div class="card-contenido-div">
-                <img src="img/BatmanYSuperman.jpeg" alt="Batman vs Superman">
+                <div class="card-contenido-img-div">
+                    <img src="img/BatmanYSuperman.jpeg" alt="Batman vs Superman">
+                </div>
                 <div class="card-contenido-texto-div">
                     <h3>Batman vs Superman: el origen de la justicia</h3>
                     <p>Descubre el enfrentamiento épico entre el Caballero Oscuro y el Hombre de Acero. ¿Quién ganará?</p>
@@ -80,7 +98,9 @@
             </div>
 
             <div class="card-contenido-div">
-                <img src="img/The batman.jpeg" alt="The Batman">
+                <div class="card-contenido-img-div">
+                    <img src="img/The batman.jpeg" alt="The Batman">
+                </div>
                 <div class="card-contenido-texto-div">
                     <h3>The Batman</h3>
                     <p>Explora el lado oscuro de Gotham en esta nueva y emocionante reinvención del Caballero Oscuro.</p>
@@ -91,7 +111,6 @@
     </section>
 
     <section class="comments-section">
-        <h2>Comentarios</h2>
         <div class="comment-input">
             <textarea placeholder="Escribe un comentario..."></textarea>
             <button>Comentar</button>
