Cambio de Media querys y titulos del VJ

--- a/vj.html
+++ b/vj.html
@@ -6,7 +6,7 @@
     <title>Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="VJ-body">
     <header>
         <div class="header_container">
             <div class="menu-hamburguesa">
@@ -31,11 +31,11 @@
         </div>
     </header>
     <section class="main-content">
-        <section class="section-titulos">
-            <div class="section-titulos-img-div">
-                <img class="section-titulos-img" src="img/batmanVsSupermanAnimado.png" alt="Batman y Superman">
+        <section class="titulos-section">
+            <div class="titulos-section-img-div">
+                <img class="titulos-section-img" src="img/vj-img/normal/2/4_en_linea.png" alt="Batman y Superman">
             </div>
-            <div class="section-titulos-texto-div">
+            <div class="titulos-section-breadscrums-div">
                 <span>
                     <a class="breadcrums-link" href="">INICIO</a>
                     /<a class="breadcrums-link" href="">ARCADE</a>/
@@ -135,5 +135,6 @@
     <footer class="footer">
         <p>Creado por un fan de Batman y Superman</p>
     </footer>
+    <script src="canvas.js"></script>
 </body>
 </html>
