cambios de los media query a min-width, avance del VJ en laptop

--- a/vj.html
+++ b/vj.html
@@ -50,13 +50,13 @@
         <section class="game-section">
             <div class="tableroyanuncios-div">
                 <div class="anuncio-div anuncio-izquierda">
-                    anuncios
+                    <img src="img/Anuncio_Heineken.jpg" alt="anuncio">
                 </div>
                 <div class="tablero-div">
                     <img src="img/gameBoard.png" alt="Tablero de Juego">
                 </div>
                 <div class="anuncio-div anuncio-derecha">
-                    Anuncios
+                    <img src="img/Anuncio_computadoras.avif" alt="anuncio">
                 </div>
             </div>
             <div class="buttons-div">
