añado efecto hover

--- a/home.html
+++ b/home.html
@@ -31,9 +31,9 @@
     </header>
     
 
-    <div class="loading-container" id="loading">
+    <!-- <div class="loading-container" id="loading">
         <div class="loading-circle"></div>
-    </div>
+    </div> -->
 
     <div class="main-container">
         <!--CAROUSEL XXL-->
@@ -105,66 +105,114 @@
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/parchis.jpg" alt="Parchis">
                             <p class="nombre-vj">Parchis</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/domino.jpg" alt="Domino">
                             <p class="nombre-vj">Domino</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/poker.jpg" alt="Poker">
                             <p class="nombre-vj">Poker</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/bingo.jpg" alt="Bingo">
                             <p class="nombre-vj">Bingo</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/ruleta.jpg" alt="Ruleta">
                             <p class="nombre-vj">Ruleta</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/Super-Mega-Solitaire-.jpg" alt="Super Mega Solitaire">
                             <p class="nombre-vj">Super Mega Solitaire</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/Freecell-Solitaire.jpg" alt="Freecell Solitaire">
                             <p class="nombre-vj">Freecell Solitaire</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/blackjack.jpg" alt="Blackjack">
                             <p class="nombre-vj">Blackjack</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/solitaire_collection_2.jpg" alt="Solitaire Collection 2">
                             <p class="nombre-vj">Solitaire Collection 2</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/uno_online.jpg" alt="Uno Online">
                             <p class="nombre-vj">Uno Online</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/quest_21.jpg" alt="Quest 21">
                             <p class="nombre-vj">Quest 21</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/mafia_poker.jpg" alt="Mafia Poker">
                             <p class="nombre-vj">Mafia Poker</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/spider_suit.jpg" alt="Spider">
                             <p class="nombre-vj">Spider</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/Rummi.jpg" alt="Rummi">
                             <p class="nombre-vj">Rummi</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/chinchon.jpg" alt="Chinchón">
                             <p class="nombre-vj">Chinchón</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                         <div class="carousel-card">
                             <img src="./img/vj-img/normal/1/cosmia.jpg" alt="Cosmia">
                             <p class="nombre-vj">Cosmia</p>
+                            <div class="overlay">
+                                <button class="play-btn">Jugar</button>
+                            </div>
                         </div>
                     </div>
     
