se acomodan tamaños en el header

--- a/home.html
+++ b/home.html
@@ -22,11 +22,11 @@
             </div>
             <div class="busqueda_container">
                 <input class="barra-busq" type="text" placeholder="Buscar...">
-                <button class="lupa"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <button class="lupa"><i class="material-symbols-outlined">search</i></button>
             </div>
             <div class="user-options">
-                <a href="#" class="cart"><i class="fa-solid fa-cart-shopping"></i></a>
-                <a href="#" class="account"><i class="fa-solid fa-user"></i></a>
+                <a href="#" class="cart"><i class="material-symbols-outlined">shopping_cart</i></a>
+                <a href="#" class="account"><i class="material-symbols-outlined">account_circle</i></a>
             </div>
         </div>
     </header>
