Fixed error loading

--- a/home.html
+++ b/home.html
@@ -31,9 +31,9 @@
         </div>
     </header>
 
-    <!--<div class="loading-container" id="loading">
+    <div class="loading-container" id="loading">
             <div class="loading-circle"></div>
-        </div> -->
+        </div> 
 
     <div class="main-container">
         <!--CAROUSEL XXL-->
