agrego imagenes, modificaciones en css, fonde degradado, correccion de fallos del responsive

--- a/vj.html
+++ b/vj.html
@@ -62,17 +62,17 @@
             <div class="buttons-div">
                 <div class="container-button">
                     <button class="star-button">
-                        <img src="" alt="star">
+                        <img src="img/fav-icon.webp" alt="star">
                     </button>
                 </div>
                 <div class="container-button">
                     <button class="like-button">
-                        <img src="" alt="star">
+                        <img src="img/Like-icon.jpg" alt="star">
                     </button>
                 </div>
                 <div class="container-button">
                     <button class="share-button">
-                        <img src="" alt="star">
+                        <img src="img/share-icon.png" alt="star">
                     </button>
                 </div>
             </div>
@@ -81,7 +81,7 @@
         <section class="description-div">
             <h2>Descripción</h2>
             <p>
-                El 4 en línea es un juego para dos jugadores en el que cada uno elige un tipo de ficha, en este caso Batman o Superman. El objetivo es ser el primero en formar una línea de cuatro fichas consecutivas en cualquier dirección: horizontal, vertical o diagonal. ¡Los jugadores deben pensar estratégicamente!
+                El 4 en línea es un juego para dos jugadores en el que cada uno elige un tipo de fichas, en este caso Batman o Superman. El objetivo es ser el primero en formar una fila de cuatro fichas consecutivas en cualquier dirección: horizontal, vertical o diagonal. Los jugadores se turnan para dejar caer una ficha en una de las columnas del tablero. Cada ficha cae al espacio más bajo disponible en la columna elegida, llenando la estructura de abajo hacia arriba. El juego se desarrolla de esta manera hasta que uno de los jugadores logra alinear cuatro de sus fichas de forma continua. Si esto ocurre, ese jugador gana la partida. Si el tablero se llena completamente sin que ninguno logre hacer la fila de cuatro, se considera un empate y se puede iniciar una nueva partida para continuar jugando.
             </p>
         </section>
 
@@ -93,7 +93,7 @@
                 <div class="card-contenido-texto-div">
                     <h3>Batman vs Superman: el origen de la justicia</h3>
                     <p>Descubre el enfrentamiento épico entre el Caballero Oscuro y el Hombre de Acero. ¿Quién ganará?</p>
-                    <a href="#" class="contenido-link"><span>En Prime Video</span></a>
+                    <a href="#"><span>En Prime Video</span></a>
                 </div>
             </div>
 
@@ -104,30 +104,35 @@
                 <div class="card-contenido-texto-div">
                     <h3>The Batman</h3>
                     <p>Explora el lado oscuro de Gotham en esta nueva y emocionante reinvención del Caballero Oscuro.</p>
-                    <a class="contenido-link" href="#"><span>En YouTube Trailer</span></a>
+                    <a href="#"><span>En YouTube Trailer</span></a>
                 </div>
             </div>
         </section>
     </section>
 
     <section class="comments-section">
-        <div class="comment-input">
-            <textarea placeholder="Escribe un comentario..."></textarea>
-            <button>Comentar</button>
+        <div class="comment-div-input">
+            <div class="comment-div-input-textarea-div">
+                <img src="img\fotoDePerfil.jpg" alt="Usuario">
+                <textarea placeholder="Escribe un comentario..."></textarea>
+            </div>
+            <div class="comment-div-input-button-div">
+                <button>Comentar</button>
+            </div>
         </div>
 
-        <div class="comment">
-            <img src="user-avatar.png" alt="Usuario">
+        <div class="comment-div">
+            <img src="img\fotoDePerfil.jpg" alt="Usuario">
             <p>¡El 4 en línea nunca pasa de moda! Es el título de juegos que no pierden su esencia, y en este caso ¡Batman y Superman le dan un toque especial!</p>
         </div>
 
-        <div class="comment">
-            <img src="user-avatar.png" alt="Usuario">
+        <div class="comment-div">
+            <img src="img\fotoDePerfil.jpg" alt="Usuario">
             <p>¡Me encanta la idea de este juego temático! ¡Las partidas con amigos son mucho más interesantes!</p>
         </div>
 
-        <div class="comment">
-            <img src="user-avatar.png" alt="Usuario">
+        <div class="comment-div">
+            <img src="img\fotoDePerfil.jpg" alt="Usuario">
             <p>¿Se puede jugar en línea? Sería genial competir con otros jugadores y demostrar quién es el mejor superhéroe.</p>
         </div>
     </section>
