--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./glider/glider.min.css">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -513,83 +514,65 @@
         </div>
         <!--fin main c-->
 
-    <footer class="fat-footer">
-        <div class="footer-section">
-            <h2>Nuevo sponsors</h2>
-            <ul>
-                <li>Antares</li>
-                <li>Shell </li>
-                <li>Glow</li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h2>Términos y Condiciones</h2>
-            <ul>
-                <li>Política de Privacidad</li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h2>Empresa</h2>
-            <ul>
-                <li>Sobre nosotros</li>
-                <li>Condiciones de uso</li>
-                <li>Ayuda</li>
-                <li>Cookies</li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h2>Contacto</h2>
-            <ul>
-                <li>Ubicación</li>
-                <li>Teléfono</li>
-                <li>Email</li>
-            </ul>
-        </div>
-        <div class="footer-bottom">
-            <p>© 2024 GameStore. Todos los derechos reservados.</p>
-        </div>
-    </footer>
+        <footer class="footer">
+            <div class="footer-content">
+                <div class="footer-sections">
+                    <div class="footer-section">
+                        <h4>Sponsors</h4>
+                        <ul>
+                            <li><a href="#" target="_blank">Antares Shell Glow</a></li>
+                            <li><a href="#" target="_blank">Gaming World</a></li>
+                            <li><a href="#" target="_blank">Tech Hub</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Términos y Condiciones</h4>
+                        <ul>
+                            <li><a href="#" target="_blank">Política de Privacidad</a></li>
+                            <li><a href="#" target="_blank">Condiciones de Uso</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Empresa</h4>
+                        <ul>
+                            <li><a href="#" target="_blank">Sobre Nosotros</a></li>
+                            <li><a href="#" target="_blank">Cookies</a></li>
+                            <li><a href="#" target="_blank">Ayuda</a></li>
+                            <li><a href="#" target="_blank">Condiciones de Uso</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Contacto</h4>
+                        <ul>
+                            <li><a href="#" target="_blank">Ubicación</a></li>
+                            <li><a href="#" target="_blank">Teléfono</a></li>
+                            <li><a href="mailto:info@gamestore.com" target="_blank">Email</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <p>© 2024 GameStore. Todos los derechos reservados.</p>
+                <div class="social-media">
+                    <a href="#" target="_blank" aria-label="Facebook">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="#" target="_blank" aria-label="Twitter">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#" target="_blank" aria-label="Instagram">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#" target="_blank" aria-label="YouTube">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
+            </div>
+        </footer>
         <script src="./glider/glider.min.js"></script>
         <script src="script.js"></script>
     <script src="vj.js"></script> 
 </body>
 
-<!-- <footer class="fat-footer">
-    <div class="footer-section">
-        <h2>Nuevo sponsors</h2>
-        <ul>
-            <li>Antares</li>
-            <li>Shell </li>
-            <li>Glow</li>
-        </ul>
-    </div>
-    <div class="footer-section">
-        <h2>Términos y Condiciones</h2>
-        <ul>
-            <li>Política de Privacidad</li>
-        </ul>
-    </div>
-    <div class="footer-section">
-        <h2>Empresa</h2>
-        <ul>
-            <li>Sobre nosotros</li>
-            <li>Condiciones de uso</li>
-            <li>Ayuda</li>
-            <li>Cookies</li>
-        </ul>
-    </div>
-    <div class="footer-section">
-        <h2>Contacto</h2>
-        <ul>
-            <li>Ubicación</li>
-            <li>Teléfono</li>
-            <li>Email</li>
-        </ul>
-    </div>
-    <div class="footer-bottom">
-        <p>© 2024 GameStore. Todos los derechos reservados.</p>
-    </div>
-</footer> -->
+
 
 
 </html>
