--- a/home.html
+++ b/home.html
@@ -513,6 +513,42 @@
             </div>
         </div>
         <!--fin main c-->
+        <footer class="fat-footer">
+            <div class="footer-section">
+                <h2>Nuevo sponsors</h2>
+                <ul>
+                    <li><p>Antares</p></li>
+                    <li><p>Shell</p></li>
+                    <li><p>Glow</p></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h2>Términos y Condiciones</h2>
+                <ul>
+                    <li><p>Politica de Privacidad</p></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h2>Empresa</h2>
+                <ul>
+                    <li><p>Sobre Nosotros</p></li>
+                    <li><p>Condiciones de uso</p></li>
+                    <li><p>Ayuda</p></li>
+                    <li><p>Cookies</p></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h2>Contacto</h2>
+                <ul>
+                    <li><p>Ubicación</p></li>
+                    <li><p>Teléfono</p></li>
+                    <li><p>Email</p></li>
+                </ul>
+            </div>
+            <div class="footer-bottom">
+                <p>© 2024 GameStore. Todos los derechos reservados.</p>
+            </div>
+        </footer>
         <script src="./glider/glider.min.js"></script>
         <script src="script.js"></script>
     <script src="vj.js"></script> 
