agrego formato botones header

--- a/home.html
+++ b/home.html
@@ -26,8 +26,14 @@
                 <button class="lupa"><i class="material-symbols-outlined">search</i></button>
             </div>
             <div class="user-options">
-                <a href="#" class="cart"><i class="material-symbols-outlined">shopping_cart</i></a>
-                <a href="#" class="account"><i class="material-symbols-outlined">account_circle</i></a>
+                <div class="cart-option">
+                    <p class="cart-text">MI CARRITO</p>
+                    <a href="#" class="cart"><i class="material-symbols-outlined">shopping_cart</i></a>
+                </div>
+                <div class="user-option">
+                    <p class="user-text">MI CUENTA</p>
+                    <a href="#" class="account"><i class="material-symbols-outlined">account_circle</i></a>
+                </div>
             </div>
         </div>
     </header>
