--- a/vj.html
+++ b/vj.html
@@ -67,12 +67,12 @@
                 </div>
                 <div class="container-button">
                     <button class="like-button">
-                        <img src="img/Like-icon.jpg" alt="star">
+                        <img src="img/Like-icon-removebg-preview.png" alt="star">
                     </button>
                 </div>
                 <div class="container-button">
                     <button class="share-button">
-                        <img src="img/share-icon.png" alt="star">
+                        <img src="img/share-icon-removebg-preview.png" alt="star">
                     </button>
                 </div>
             </div>
@@ -91,8 +91,8 @@
                     <img src="img/BatmanYSuperman.jpeg" alt="Batman vs Superman">
                 </div>
                 <div class="card-contenido-texto-div">
+                    <p>Mira la pelicula:</p>
                     <h3>Batman vs Superman: el origen de la justicia</h3>
-                    <p>Descubre el enfrentamiento épico entre el Caballero Oscuro y el Hombre de Acero. ¿Quién ganará?</p>
                     <a href="#"><span>En Prime Video</span></a>
                 </div>
             </div>
@@ -102,9 +102,9 @@
                     <img src="img/The batman.jpeg" alt="The Batman">
                 </div>
                 <div class="card-contenido-texto-div">
+                    <p>Mira el trailer de:</p>
                     <h3>The Batman</h3>
-                    <p>Explora el lado oscuro de Gotham en esta nueva y emocionante reinvención del Caballero Oscuro.</p>
-                    <a href="#"><span>En YouTube Trailer</span></a>
+                    <a href="#"><span>En YouTube</span></a>
                 </div>
             </div>
         </section>
@@ -114,10 +114,10 @@
         <div class="comment-div-input">
             <div class="comment-div-input-textarea-div">
                 <img src="img\fotoDePerfil.jpg" alt="Usuario">
-                <textarea placeholder="Escribe un comentario..."></textarea>
+                <textarea placeholder="Haz un comentario..."></textarea>
             </div>
             <div class="comment-div-input-button-div">
-                <button>Comentar</button>
+                <button>COMENTAR</button>
             </div>
         </div>
 
