--- a/vj.html
+++ b/vj.html
@@ -16,7 +16,7 @@
               </div>
             
             <div class="logo_container">
-                <a href="home.html" class="link-logo"><img src="./img/Logo_GAMESTORE.png" class="logo" alt="logo-game-store"></a>
+                <a href="home.html" class="link-logo"><img src="img/Logo_GAMESTORE.png" class="logo" alt="logo-game-store"></a>
             </div>
             
             <div class="busqueda_container">
@@ -50,29 +50,29 @@
         <section class="game-section">
             <div class="tableroyanuncios-div">
                 <div class="anuncio-div anuncio-izquierda">
-                    <img src="img/Anuncio_Heineken.jpg" alt="anuncio">
+                    <img src="img/vj-img/VJ/Anuncio_Heineken.jpg" alt="anuncio">
                 </div>
                 <div class="tablero-div">
-                    <img src="img/gameBoard.png" alt="Tablero de Juego">
+                    <img src="img/vj-img/VJ/gameBoard.png" alt="Tablero de Juego">
                 </div>
                 <div class="anuncio-div anuncio-derecha">
-                    <img src="img/Anuncio_computadoras.avif" alt="anuncio">
+                    <img src="img/vj-img/VJ/Anuncio_computadoras.avif" alt="anuncio">
                 </div>
             </div>
             <div class="buttons-div">
                 <div class="container-button">
                     <button class="star-button">
-                        <img src="img/fav-icon.webp" alt="star">
+                        <img src="img/vj-img/VJ/fav-icon.webp" alt="star">
                     </button>
                 </div>
                 <div class="container-button">
                     <button class="like-button">
-                        <img src="img/Like-icon-removebg-preview.png" alt="star">
+                        <img src="img/vj-img/VJ/Like-icon-removebg-preview.png" alt="star">
                     </button>
                 </div>
                 <div class="container-button">
                     <button class="share-button">
-                        <img src="img/share-icon-removebg-preview.png" alt="star">
+                        <img src="img/vj-img/VJ/share-icon-removebg-preview.png" alt="star">
                     </button>
                 </div>
             </div>
@@ -88,7 +88,7 @@
         <section class="contenido-section">
             <div class="card-contenido-div">
                 <div class="card-contenido-img-div">
-                    <img src="img/BatmanYSuperman.jpeg" alt="Batman vs Superman">
+                    <img src="img/vj-img/VJ/BatmanYSuperman.jpeg" alt="Batman vs Superman">
                 </div>
                 <div class="card-contenido-texto-div">
                     <p>Mira la pelicula:</p>
@@ -99,7 +99,7 @@
 
             <div class="card-contenido-div">
                 <div class="card-contenido-img-div">
-                    <img src="img/The batman.jpeg" alt="The Batman">
+                    <img src="img/vj-img/VJ/The batman.jpeg" alt="The Batman">
                 </div>
                 <div class="card-contenido-texto-div">
                     <p>Mira el trailer de:</p>
@@ -113,7 +113,7 @@
     <section class="comments-section">
         <div class="comment-div-input">
             <div class="comment-div-input-textarea-div">
-                <img src="img\fotoDePerfil.jpg" alt="Usuario">
+                <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
                 <textarea placeholder="Haz un comentario..."></textarea>
             </div>
             <div class="comment-div-input-button-div">
@@ -122,24 +122,19 @@
         </div>
 
         <div class="comment-div">
-            <img src="img\fotoDePerfil.jpg" alt="Usuario">
+            <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
             <p>¡El 4 en línea nunca pasa de moda! Es el título de juegos que no pierden su esencia, y en este caso ¡Batman y Superman le dan un toque especial!</p>
         </div>
 
         <div class="comment-div">
-            <img src="img\fotoDePerfil.jpg" alt="Usuario">
+            <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
             <p>¡Me encanta la idea de este juego temático! ¡Las partidas con amigos son mucho más interesantes!</p>
         </div>
 
         <div class="comment-div">
-            <img src="img\fotoDePerfil.jpg" alt="Usuario">
+            <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
             <p>¿Se puede jugar en línea? Sería genial competir con otros jugadores y demostrar quién es el mejor superhéroe.</p>
         </div>
     </section>
-
-    <footer class="footer">
-        <p>Creado por un fan de Batman y Superman</p>
-    </footer>
-    <script src="canvas.js"></script>
 </body>
 </html>
