menu desplegable formateado, link al VJ agregado

--- a/home.html
+++ b/home.html
@@ -38,9 +38,30 @@
         </div>
     </header>
 
+    <div class="menu-container">
+        <div class="menu">
+            <button class="close-btn"><i class="material-symbols-outlined">cancel</i></button>
+            <h2>CATEGORIAS</h2>
+            <ul>
+                <li><a href="#"><i class="material-symbols-outlined">landscape</i> AVENTURA</a></li>
+                <li><a href="#"><i class="material-symbols-outlined">sports_soccer</i> DEPORTES</a></li>
+                <li><a href="#"><i class="material-symbols-outlined">favorite</i> ROMANCE</a></li>
+                <li><a href="#"><i class="material-symbols-outlined">joystick</i>ARCADE</a></li>
+                <li><a href="#"><i class="material-symbols-outlined">swords</i> ACCION</a></li>
+            </ul>
+            <h2>REDES SOCIALES</h2>
+            <div class="social-media">
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+            </div>
+        </div>
+    </div>
+
     <div class="loading-container" id="loading">
             <div class="loading-circle"></div>
-        </div> 
+        </div>
 
     <div class="main-container">
         <!--CAROUSEL XXL-->
@@ -310,7 +331,7 @@
                             <img src="./img/vj-img/normal/2/4_en_linea.png" alt="4 en Linea">
                             <p class="nombre-vj">4 en Linea</p>
                             <div class="overlay">
-                                <button class="play-btn-free">Jugar<i class="material-symbols-outlined">play_circle</i></button>
+                                <a href="vj.html" class="play-btn-free">Jugar<i class="material-symbols-outlined">play_circle</i></a>
                             </div>
                         </div>
                         <div class="carousel-card">
