--- a/home.html
+++ b/home.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./glider/glider.min.css">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -540,44 +539,84 @@
             </div>
         </div>
         <!--fin main c-->
-        <footer class="fat-footer">
-            <div class="footer-section">
-                <h2>Nuevo sponsors</h2>
-                <ul>
-                    <li><p>Antares</p></li>
-                    <li><p>Shell</p></li>
-                    <li><p>Glow</p></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h2>Términos y Condiciones</h2>
-                <ul>
-                    <li><p>Politica de Privacidad</p></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h2>Empresa</h2>
-                <ul>
-                    <li><p>Sobre Nosotros</p></li>
-                    <li><p>Condiciones de uso</p></li>
-                    <li><p>Ayuda</p></li>
-                    <li><p>Cookies</p></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h2>Contacto</h2>
-                <ul>
-                    <li><p>Ubicación</p></li>
-                    <li><p>Teléfono</p></li>
-                    <li><p>Email</p></li>
-                </ul>
-            </div>
-            <div class="footer-bottom">
-                <p>© 2024 GameStore. Todos los derechos reservados.</p>
-            </div>
-        </footer>
+
+    <footer class="fat-footer">
+        <div class="footer-section">
+            <h2>Nuevo sponsors</h2>
+            <ul>
+                <li>Antares</li>
+                <li>Shell </li>
+                <li>Glow</li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h2>Términos y Condiciones</h2>
+            <ul>
+                <li>Política de Privacidad</li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h2>Empresa</h2>
+            <ul>
+                <li>Sobre nosotros</li>
+                <li>Condiciones de uso</li>
+                <li>Ayuda</li>
+                <li>Cookies</li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h2>Contacto</h2>
+            <ul>
+                <li>Ubicación</li>
+                <li>Teléfono</li>
+                <li>Email</li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2024 GameStore. Todos los derechos reservados.</p>
+        </div>
+    </footer>
         <script src="./glider/glider.min.js"></script>
         <script src="script.js"></script>
     <script src="vj.js"></script> 
 </body>
+
+<!-- <footer class="fat-footer">
+    <div class="footer-section">
+        <h2>Nuevo sponsors</h2>
+        <ul>
+            <li>Antares</li>
+            <li>Shell </li>
+            <li>Glow</li>
+        </ul>
+    </div>
+    <div class="footer-section">
+        <h2>Términos y Condiciones</h2>
+        <ul>
+            <li>Política de Privacidad</li>
+        </ul>
+    </div>
+    <div class="footer-section">
+        <h2>Empresa</h2>
+        <ul>
+            <li>Sobre nosotros</li>
+            <li>Condiciones de uso</li>
+            <li>Ayuda</li>
+            <li>Cookies</li>
+        </ul>
+    </div>
+    <div class="footer-section">
+        <h2>Contacto</h2>
+        <ul>
+            <li>Ubicación</li>
+            <li>Teléfono</li>
+            <li>Email</li>
+        </ul>
+    </div>
+    <div class="footer-bottom">
+        <p>© 2024 GameStore. Todos los derechos reservados.</p>
+    </div>
+</footer> -->
+
+
 </html>
