--- a/vj.html
+++ b/vj.html
@@ -6,135 +6,174 @@
     <title>Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="VJ-body">
-    <header>
-        <div class="header_container">
-            <div class="menu-hamburguesa">
-                <span></span>
-                <span></span>
-                <span></span>
-              </div>
-            
-            <div class="logo_container">
-                <a href="home.html" class="link-logo"><img src="img/Logo_GAMESTORE.png" class="logo" alt="logo-game-store"></a>
+    <body class="VJ-body">
+        <header>
+            <div class="header_container">
+                <div class="menu-hamburguesa">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="logo_container">
+                    <a href="home.html" class="link-logo"><img src="./img/Logo_GAMESTORE.png" class="logo" alt="logo-game-store"></a>
+                </div>
+                <div class="busqueda_container">
+                    <input class="barra-busq" type="text" placeholder="Buscar...">
+                    <button class="lupa"><i class="material-symbols-outlined">search</i></button>
+                </div>
+                <div class="user-options">
+                    <div class="cart-option">
+                        <p class="cart-text">MI CARRITO</p>
+                        <a href="#" class="cart"><i class="material-symbols-outlined">shopping_cart</i></a>
+                    </div>
+                    <div class="user-option">
+                        <p class="user-text">MI CUENTA</p>
+                        <a href="#" class="account"><i class="material-symbols-outlined">account_circle</i></a>
+                    </div>
+                </div>
             </div>
-            
-            <div class="busqueda_container">
-                <input class="barra-busq" type="text" placeholder="Buscar...">
-                <button class="lupa"><i class="fa-solid fa-magnifying-glass"></i></button>
-            </div>
+        </header>
+        <section class="main-content">
+            <section class="titulos-section">
+                <div class="titulos-section-img-div">
+                    <img class="titulos-section-img" src="img/vj-img/normal/2/4_en_linea.png" alt="Batman y Superman">
+                </div>
+                <div class="titulos-section-breadscrums-div">
+                    <span>
+                        <a class="breadcrums-link" href="">INICIO</a>
+                        /<a class="breadcrums-link" href="">ARCADE</a>/
+                        <a class="breadcrums-link" href="">4 EN LINEA BATMAN VS SUPERMAN</a></span>
+                    <h1>4 EN LINEA BATMAN VS SUPERMAN</h1>
+                    <p>
+                        El clásico 4 en Línea, adaptado para los seguidores y amantes de los héroes del universo DC. 
+                        4 en línea, triunfo asegurado
+                    </p>
+                </div>
+            </section>
+            <section class="game-section">
+                <div class="tableroyanuncios-div">
+                    <div class="anuncio-div anuncio-izquierda">
+                        <img src="img/vj-img/VJ/Anuncio_Heineken.jpg" alt="anuncio">
+                    </div>
+                    <div class="tablero-div">
+                        <img src="img/vj-img/VJ/gameBoard.png" alt="Tablero de Juego">
+                    </div>
+                    <div class="anuncio-div anuncio-derecha">
+                        <img src="img/vj-img/VJ/Anuncio_computadoras.avif" alt="anuncio">
+                    </div>
+                </div>
+                <div class="buttons-div">
+                    <div class="container-button">
+                        <button class="star-button">
+                            <img src="img/vj-img/VJ/fav-icon.webp" alt="star">
+                        </button>
+                    </div>
+                    <div class="container-button">
+                        <button class="like-button">
+                            <img src="img/vj-img/VJ/Like-icon-removebg-preview.png" alt="star">
+                        </button>
+                    </div>
+                    <div class="container-button">
+                        <button class="share-button">
+                            <img src="img/vj-img/VJ/share-icon-removebg-preview.png" alt="star">
+                        </button>
+                    </div>
+                </div>
+            </section>
 
-            <div class="atajos">
-                <button>carrito</button>
-                <button>mi cuenta</button>
-            </div>
-        </div>
-    </header>
-    <section class="main-content">
-        <section class="titulos-section">
-            <div class="titulos-section-img-div">
-                <img class="titulos-section-img" src="img/vj-img/normal/2/4_en_linea.png" alt="Batman y Superman">
-            </div>
-            <div class="titulos-section-breadscrums-div">
-                <span>
-                    <a class="breadcrums-link" href="">INICIO</a>
-                    /<a class="breadcrums-link" href="">ARCADE</a>/
-                    <a class="breadcrums-link" href="">4 EN LINEA BATMAN VS SUPERMAN</a></span>
-                <h1>4 EN LINEA BATMAN VS SUPERMAN</h1>
+            <section class="description-div">
+                <h2>Descripción</h2>
                 <p>
-                    El clásico 4 en Línea, adaptado para los seguidores y amantes de los héroes del universo DC. 
-                    4 en línea, triunfo asegurado
+                    El 4 en línea es un juego para dos jugadores en el que cada uno elige un tipo de fichas, en este caso Batman o Superman. El objetivo es ser el primero en formar una fila de cuatro fichas consecutivas en cualquier dirección: horizontal, vertical o diagonal. Los jugadores se turnan para dejar caer una ficha en una de las columnas del tablero. Cada ficha cae al espacio más bajo disponible en la columna elegida, llenando la estructura de abajo hacia arriba. El juego se desarrolla de esta manera hasta que uno de los jugadores logra alinear cuatro de sus fichas de forma continua. Si esto ocurre, ese jugador gana la partida. Si el tablero se llena completamente sin que ninguno logre hacer la fila de cuatro, se considera un empate y se puede iniciar una nueva partida para continuar jugando.
                 </p>
-            </div>
-        </section>
-        <section class="game-section">
-            <div class="tableroyanuncios-div">
-                <div class="anuncio-div anuncio-izquierda">
-                    <img src="img/vj-img/VJ/Anuncio_Heineken.jpg" alt="anuncio">
+            </section>
+
+            <section class="contenido-section">
+                <div class="card-contenido-div">
+                    <div class="card-contenido-img-div">
+                        <img src="img/vj-img/VJ/BatmanYSuperman.jpeg" alt="Batman vs Superman">
+                    </div>
+                    <div class="card-contenido-texto-div">
+                        <p>Mira la pelicula:</p>
+                        <h3>Batman vs Superman: el origen de la justicia</h3>
+                        <a href="#"><span>En Prime Video</span></a>
+                    </div>
                 </div>
-                <div class="tablero-div">
-                    <img src="img/vj-img/VJ/gameBoard.png" alt="Tablero de Juego">
+
+                <div class="card-contenido-div">
+                    <div class="card-contenido-img-div">
+                        <img src="img/vj-img/VJ/The batman.jpeg" alt="The Batman">
+                    </div>
+                    <div class="card-contenido-texto-div">
+                        <p>Mira el trailer de:</p>
+                        <h3>The Batman</h3>
+                        <a href="#"><span>En YouTube</span></a>
+                    </div>
                 </div>
-                <div class="anuncio-div anuncio-derecha">
-                    <img src="img/vj-img/VJ/Anuncio_computadoras.avif" alt="anuncio">
-                </div>
-            </div>
-            <div class="buttons-div">
-                <div class="container-button">
-                    <button class="star-button">
-                        <img src="img/vj-img/VJ/fav-icon.webp" alt="star">
-                    </button>
-                </div>
-                <div class="container-button">
-                    <button class="like-button">
-                        <img src="img/vj-img/VJ/Like-icon-removebg-preview.png" alt="star">
-                    </button>
-                </div>
-                <div class="container-button">
-                    <button class="share-button">
-                        <img src="img/vj-img/VJ/share-icon-removebg-preview.png" alt="star">
-                    </button>
-                </div>
-            </div>
+            </section>
         </section>
 
-        <section class="description-div">
-            <h2>Descripción</h2>
-            <p>
-                El 4 en línea es un juego para dos jugadores en el que cada uno elige un tipo de fichas, en este caso Batman o Superman. El objetivo es ser el primero en formar una fila de cuatro fichas consecutivas en cualquier dirección: horizontal, vertical o diagonal. Los jugadores se turnan para dejar caer una ficha en una de las columnas del tablero. Cada ficha cae al espacio más bajo disponible en la columna elegida, llenando la estructura de abajo hacia arriba. El juego se desarrolla de esta manera hasta que uno de los jugadores logra alinear cuatro de sus fichas de forma continua. Si esto ocurre, ese jugador gana la partida. Si el tablero se llena completamente sin que ninguno logre hacer la fila de cuatro, se considera un empate y se puede iniciar una nueva partida para continuar jugando.
-            </p>
-        </section>
-
-        <section class="contenido-section">
-            <div class="card-contenido-div">
-                <div class="card-contenido-img-div">
-                    <img src="img/vj-img/VJ/BatmanYSuperman.jpeg" alt="Batman vs Superman">
+        <section class="comments-section">
+            <div class="comment-div-input">
+                <div class="comment-div-input-textarea-div">
+                    <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
+                    <textarea placeholder="Haz un comentario..."></textarea>
                 </div>
-                <div class="card-contenido-texto-div">
-                    <p>Mira la pelicula:</p>
-                    <h3>Batman vs Superman: el origen de la justicia</h3>
-                    <a href="#"><span>En Prime Video</span></a>
+                <div class="comment-div-input-button-div">
+                    <button>COMENTAR</button>
                 </div>
             </div>
 
-            <div class="card-contenido-div">
-                <div class="card-contenido-img-div">
-                    <img src="img/vj-img/VJ/The batman.jpeg" alt="The Batman">
-                </div>
-                <div class="card-contenido-texto-div">
-                    <p>Mira el trailer de:</p>
-                    <h3>The Batman</h3>
-                    <a href="#"><span>En YouTube</span></a>
-                </div>
-            </div>
-        </section>
-    </section>
-
-    <section class="comments-section">
-        <div class="comment-div-input">
-            <div class="comment-div-input-textarea-div">
+            <div class="comment-div">
                 <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
-                <textarea placeholder="Haz un comentario..."></textarea>
+                <p>¡El 4 en línea nunca pasa de moda! Es el título de juegos que no pierden su esencia, y en este caso ¡Batman y Superman le dan un toque especial!</p>
             </div>
-            <div class="comment-div-input-button-div">
-                <button>COMENTAR</button>
+
+            <div class="comment-div">
+                <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
+                <p>¡Me encanta la idea de este juego temático! ¡Las partidas con amigos son mucho más interesantes!</p>
             </div>
-        </div>
 
-        <div class="comment-div">
-            <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
-            <p>¡El 4 en línea nunca pasa de moda! Es el título de juegos que no pierden su esencia, y en este caso ¡Batman y Superman le dan un toque especial!</p>
-        </div>
-
-        <div class="comment-div">
-            <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
-            <p>¡Me encanta la idea de este juego temático! ¡Las partidas con amigos son mucho más interesantes!</p>
-        </div>
-
-        <div class="comment-div">
-            <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
-            <p>¿Se puede jugar en línea? Sería genial competir con otros jugadores y demostrar quién es el mejor superhéroe.</p>
-        </div>
-    </section>
-</body>
+            <div class="comment-div">
+                <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
+                <p>¿Se puede jugar en línea? Sería genial competir con otros jugadores y demostrar quién es el mejor superhéroe.</p>
+            </div>
+        </section>
+        <footer class="fat-footer">
+            <div class="footer-section">
+                <h2>Nuevo sponsors</h2>
+                <ul>
+                    <li>Antares</li>
+                    <li>Shell </li>
+                    <li>Glow</li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h2>Términos y Condiciones</h2>
+                <ul>
+                    <li>Política de Privacidad</li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h2>Empresa</h2>
+                <ul>
+                    <li>Sobre nosotros</li>
+                    <li>Condiciones de uso</li>
+                    <li>Ayuda</li>
+                    <li>Cookies</li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h2>Contacto</h2>
+                <ul>
+                    <li>Ubicación</li>
+                    <li>Teléfono</li>
+                    <li>Email</li>
+                </ul>
+            </div>
+            <div class="footer-bottom">
+                <p>© 2024 GameStore. Todos los derechos reservados.</p>
+            </div>
+        </footer>
+    </body>
 </html>
