--- a/home.html
+++ b/home.html
@@ -540,42 +540,49 @@
         </div>
         <!--fin main c-->
 
-    <footer class="fat-footer">
-        <div class="footer-section">
-            <h2>Nuevo sponsors</h2>
-            <ul>
-                <li>Antares</li>
-                <li>Shell </li>
-                <li>Glow</li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h2>Términos y Condiciones</h2>
-            <ul>
-                <li>Política de Privacidad</li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h2>Empresa</h2>
-            <ul>
-                <li>Sobre nosotros</li>
-                <li>Condiciones de uso</li>
-                <li>Ayuda</li>
-                <li>Cookies</li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h2>Contacto</h2>
-            <ul>
-                <li>Ubicación</li>
-                <li>Teléfono</li>
-                <li>Email</li>
-            </ul>
-        </div>
-        <div class="footer-bottom">
-            <p>© 2024 GameStore. Todos los derechos reservados.</p>
-        </div>
-    </footer>
+        <footer class="custom-footer">
+            <div class="custom-container">
+               <div class="custom-row">
+                  <div class="custom-footer-col">
+                     <h4>Compania</h4>
+                     <ul>
+                        <li><a href="#">Sobre nosotros</a></li>
+                        <li><a href="#">Nuestros servicios</a></li>
+                        <li><a href="#">Politica y privacidad</a></li>
+                        <li><a href="#">Programa de afiliados</a></li>
+                     </ul>
+                  </div>
+                  <div class="custom-footer-col">
+                     <h4>Ayuda</h4>
+                     <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Envio</a></li>
+                        <li><a href="#">Estado del pedido</a></li>
+                        <li><a href="#">Opciones de pago</a></li>
+                     </ul>
+                  </div>
+                  <div class="custom-footer-col">
+                     <h4>Sponsors</h4>
+                     <ul>
+                        <li><a href="#">Glow</a></li>
+                        <li><a href="#">Sol Disco</a></li>
+                        <li><a href="#">Antares</a></li>
+                        <li><a href="#">Hipico</a></li>
+                     </ul>
+                  </div>
+                  <div class="custom-footer-col">
+                     <h4>Redes Sociales</h4>
+                     <div class="custom-social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </footer>
+         
         <script src="./glider/glider.min.js"></script>
         <script src="script.js"></script>
     <script src="vj.js"></script> 
